--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
   --light-grey: #EDEDED;
   --small-fs: 0.0625rem;
   --footer-text: rgba(255, 255, 255, 0.7);
-  --accent: #FF8E00;
+  --accent: #fca53b;
 }
 
 /* General Styles & Typography */
@@ -93,13 +93,31 @@ ul {
 nav a {
   text-decoration: none;
   color: currentColor;
+  position: relative;
+  padding-bottom: .6em;
+}
+
+nav a::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 3px;
+  background-color: var(--light-grey);
+  transition: width 200ms ease-out;
+}
+
+nav a:hover::before,
+nav a:focus::before {
+  width: 100%;
 }
 
 nav a:hover,
 nav a:focus {
-  border-bottom: 3px solid var(--light-grey);
   color: var(--accent);
 }
+
 
 .about,
 .projects {
@@ -268,7 +286,7 @@ i {
   }
 
   .nav {
-    padding: 1em 1.5em;
+    padding: .5em 1.5em;
     flex-direction: row;
     justify-content: space-between;
   }
