--- a/src/index.css
+++ b/src/index.css
@@ -9,15 +9,10 @@
   --h1-lg-fs: 3.5rem;
   --h2-sm-fs: 1.3125rem;
   --h2-lg-fs: 1.45rem;
-  --h3-sm-fs: 1.275rem;
-  --h3-lg-fs: 1.5rem;
-  --h3-border: #787A91;
   --font-color: #1B1A17;
   --black: black;
   --font-family: 'League Spartan', sans-serif;
   --light-grey: #EDEDED;
-  --small-fs: 0.0625rem;
-  --footer-text: rgba(255, 255, 255, 0.7);
   --accent: #fca53b;
 }
 
@@ -28,9 +23,16 @@
   box-sizing: border-box;
 }
 
+h1,
+ul {
+  margin: 0;
+  padding: 0;
+}
+
 .container {
   width: 90%;
   margin: 0 auto;
+  padding-top: 1.2em;
 }
 
 body {
@@ -40,13 +42,7 @@ body {
   color: var(--font-color);
   margin: 0;
   line-height: 1.6;
-}
-
-h2,
-h4,
-p,
-footer {
-  text-align: center;
+  min-height: 100vh;
 }
 
 h1 {
@@ -60,35 +56,21 @@ h2 {
   font-size: var(--h2-sm-fs);
 }
 
-hr {
-  margin: 0;
-  border: 2px groove #1B262C;
-  border-radius: 32px;
-}
-
-h3 {
-  color: #001E6C;
-  font-weight: 700;
-  border: 7px inset var(--h3-border);
-  width: max-content;
-  margin: 0 auto;
-  padding: 0 .6em;
-  border-radius: 9px;
-}
-
 ul {
   list-style: none;
   text-transform: uppercase;
   font-weight: 700;
 }
 
-/* header nav {
-  position: fixed;
+header {
   width: 100%;
+  position: fixed;
   top: 0;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-} */
+}
 
+#root {
+  margin-top: 12em;
+}
 
 nav a {
   text-decoration: none;
@@ -118,46 +100,6 @@ nav a:focus {
   color: var(--accent);
 }
 
-
-.about,
-.projects {
-  padding: 1em 2em;
-}
-
-/* Images */
-.intro-image {
-  max-width: 100%;
-  border-radius: 50%;
-  object-fit: cover;
-  width: 220px;
-  height: 220px;
-}
-
-.images-container {
-  max-width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  gap: .5em;
-}
-
-.image-div {
-  flex: 1 212px;
-}
-
-.project-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border: 1px groove var(--black);
-
-}
-
-.project-img:focus,
-.project-img:hover {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  transition: 500ms;
-}
-
 /* Navigation Layout */
 .nav {
   display: flex;
@@ -165,6 +107,8 @@ nav a:focus {
   align-items: center;
   background: var(--nav-bg);
   color: var(--nav-text);
+  box-shadow: 0px 2px 10px -5px rgba(21, 6, 5, 1);
+  padding: .5em 0;
 }
 
 .nav-title {
@@ -180,40 +124,67 @@ nav a:focus {
   letter-spacing: 1px;
 }
 
-/* Intro Section */
+/* Home/Intro Section  */
 .intro {
   display: flex;
-  padding: 1em 2em .5em 2em;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
 }
 
 .intro-image {
+  max-width: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+  width: 220px;
+  height: 220px;
   order: -1;
 }
 
-/* About Section */
-.about-title,
-.projects-title {
-  text-transform: uppercase;
-  letter-spacing: 1px;
+.intro-body {
+  text-align: center;
 }
 
-/* Projects Section */
-.projects-title {
-  margin-bottom: 0;
+/* Projects */
+.project-card {
+  max-width: 100%;
+  width: 300px;
+  height: 200px;
+}
+
+.project-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border: none groove var(--black);
+}
+
+.project-card:focus,
+.project-card:hover {
+  box-shadow: 0px 6px 10px 2px rgba(0, 0, 0, 0.2),
+    0px -6px 10px 2px rgba(0, 0, 0, 0.2);
+  transform: translateY(-5px);
 }
 
 .project-link {
   position: relative;
 }
 
+.projects-wrapper {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-basis: auto;
+  gap: 15px;
+  padding: 2em;
+}
+
+
 /* Image Banner */
 .project-description {
   background: #1B262C;
-  color: var(--accent);
-  box-shadow: 1px 1px 5px var(--h3-border);
+  color: var(--light-grey);
+  text-shadow: 0 0 5px black;
   padding: .1em .24em;
   font-size: .9rem;
   position: absolute;
@@ -221,39 +192,54 @@ nav a:focus {
   left: 0;
 }
 
-/* Footer Section */
-footer {
-  background-image: linear-gradient(#214177, #0F4C75);
-  color: var(--footer-text);
-  padding: 1.2em 0;
-  top: 0;
+/* Contact Section */
+.icons {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-basis: auto;
+  gap: 15px;
+  padding: 2em;
+
 }
 
-.footer-icons a,
-i {
-  font-size: 2rem;
-  padding: 0 .4em;
-  color: currentColor;
+.icons div a {
+  font-size: 7rem;
   text-decoration: none;
+  color: currentColor;
+  padding: 0 .4em;
 }
 
-.footer-icons a:hover,
-.footer-icons a:focus {
-  cursor: pointer;
-  opacity: .7;
-  color: var(--accent);
-  transition: 500ms;
+
+.icons div {
+  box-shadow: 0px 3px 7px 1px rgba(0, 0, 0, 0.07),
+    0px -3px 7px 1px rgba(0, 0, 0, 0.07);
+  transition: box-shadow 0.5s ease-in-out;
+}
+
+.icons div:hover,
+.icons div:focus {
+  box-shadow: 0px 6px 10px 2px rgba(0, 0, 0, 0.2),
+    0px -6px 10px 2px rgba(0, 0, 0, 0.2);
+  transform: translateY(-5px);
+  color: var(--accent)
 }
 
 /* Utilities */
-.pill {
-  background: #1B262C;
-  color: #BDD8F1;
-  border-radius: 30px;
+.skills {
+  text-align: center;
+}
+
+.paddingXY {
+  padding: 1.7em 2.5em;
+}
+
+.dev-icon {
   padding: .3em 1em;
-  order: 0;
-  font-size: 1.3rem;
-  line-height: 1.9;
+  margin: 0 .1em;
+  width: 80px;
+  height: 50px;
 }
 
 .accent-link {
@@ -270,19 +256,9 @@ i {
   border-radius: 30px;
 }
 
-/* Media Queries */
-@media(min-width: 700px) {
-  body {
-    font-size: var(--body-lg-fs);
-  }
-
-  .intro-title {
-    font-size: var(--h2-lg-fs);
-    font-weight: 600;
-  }
-
-  p {
-    font-size: 1.5rem;
+@media(min-width: 40em) {
+  #root {
+    margin-top: 4em;
   }
 
   .nav {
@@ -300,28 +276,72 @@ i {
     justify-content: center;
     margin: 0;
   }
+}
+
+/* Media Queries */
+@media(min-width: 55em) {
+
+  html,
+  body {
+    height: 100%;
+  }
+
+  body {
+    font-size: var(--body-lg-fs);
+  }
+
+  #root {
+    margin-top: 4em;
+  }
+
+  .intro-title {
+    font-size: var(--h2-lg-fs);
+    font-weight: 600;
+  }
+
+  p {
+    font-size: 1.4rem;
+  }
 
   .intro {
     flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
+    gap: 3.2em;
   }
 
-  .intro div {
-    padding: 1em 2em;
+  .intro-body {
+    text-align: left;
   }
 
   .intro-image {
-    width: 270px;
-    height: 270px;
+    order: -1;
+    width: 280px;
+    height: 280px;
   }
-}
 
-@media (max-width: 800px) {
-  .intro {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  .skills {
+    margin: 2em 0;
+  }
+
+  .dev-icon {
+    width: 110px;
+    height: 110px;
+  }
+
+  .icons {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    place-items: center;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto auto;
+    padding: 7.7em 2.5em;
+  }
+
+  .projects-wrapper {
+    width: 100%;
+    display: grid;
+    place-items: center;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto auto;
   }
 }
