Set margin to zero

--- a/src/index.css
+++ b/src/index.css
@@ -318,9 +318,9 @@ nav a:focus {
     height: 280px;
   }
 
-  .skills {
+  /* .skills {
     margin: 2em 0;
-  }
+  } */
 
   .dev-icon {
     width: 110px;
